# UAO-desarrollo-de-proyectos-de-ia

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  ContextoTrabajo.md  Dockerfile  LICENSE  Makefile  README.md  TareasDesarrollo.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
models/: confusion_matrix.csv  labels.json  val_report.txt
models/hf_cache/models--facebook--deit-tiny-patch16-224/refs/: main
models/hf_cache/models--facebook--deit-tiny-patch16-224/refs/refs/pr/: 3
models/hf_cache/models--facebook--deit-tiny-patch16-224/snapshots/b3428f18dcc7b543470d07f14b4a4157815d1880/: config.json
proto/: triage.proto
scripts/: evaluate.py  train.py
src/: config.py
src/api/: deps.py  main.py  pdf_builder.py  schemas.py  utils.py
src/api/routes/: health.py  predict.py  report.py  ui.py
src/api/static/: style.css
src/api/static/css/: style.css
src/api/static/js/: triage.js
src/api/templates/: base.html  index.html  result.html
src/domain/: categories.py
src/grpc/: client.py  server.py
src/grpc/stubs/: triage_pb2.py  triage_pb2_grpc.py
src/inference/: classifier.py  model.py  service.py
tests/: conftest.py  test_grpc.py  test_health.py  test_inference.py  test_predict.py  test_report.py
